# PLL

./: .gitignore  ARCHITECTURE.md  NEXT_SESSION.md  README.md  ROADMAP.md  _test_add_nest.pll  _test_five.pll  _test_ident.pll  _test_ident2.pll  _test_main_add.pll  _test_nested.pll  benchmark.pll  cross_call.pll  debug_fact.pll  dec_test.pll  deep2.pll  fact_test.pll  fn_test.pll  mutual.pll  nested_a.pll  nested_debug.pll  nested_explicit.pll  pll_compiler.rs  pll_reference_for_agents.md  probabilistic_llm_language_draft.md  pvm.py  showcase.pll  simple_a.pll  simple_nest.pll  simple_rec.pll  start.bat  stress.pll  test_max.pll
pll/: Cargo.toml  serveur.bat  start.bat  test_agent.py  tu_es_operationnel.R
pll-ide/playground/: agent.js  api.js  editor-setup.js  editor.js  git.js  index.css  index.html  index.js  ui.js
pll-ide/src-tauri/: llm_cache.json
pll-lang/: Cargo.toml
pll-lang/crates/pll-cli/: Cargo.toml
pll-lang/crates/pll-cli/src/: main.rs
pll-lang/crates/pll-wasm/: Cargo.toml
pll-lang/crates/pll-wasm/src/: lib.rs
pll/benchmark/: README.md  benchmark_report.md  benchmark_vm_speed.py  compare.py  reliability_report.md  reliability_test.py
pll/crates/pll-cli/: Cargo.toml
pll/crates/pll-cli/src/: bootstrap.rs  main.rs
pll/playground/: api.js  editor-setup.js  index.css  index.html  index.js  state.js  ui.js
pll/server/: .gitignore  config.py  database.py  main.py  models.py  pll_server.db-shm  pll_server.db-wal  requirements.txt  (+1 more)
spec/: SUMMARY.md  agent_protocol.md  ast.md  bootstrap.md  compiler.md  core_spec.md  grammar.ebnf  type_system.md
(+91 files in other folders)
