[package]
name = "pll-cli"
version.workspace = true
edition.workspace = true

[dependencies]
pll-core = { path = "../pll-core" }
pll-lexer = { path = "../pll-lexer" }
pll-parser = { path = "../pll-parser" }
pll-typeck = { path = "../pll-typeck" }
pll-codegen = { path = "../pll-codegen" }
pll-runtime = { path = "../pll-runtime" }
pll-bytecode = { path = "../pll-bytecode" }
pll-wire = { path = "../pll-wire" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
